# rusty-raytracer

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: canvas.rs  color.rs  intersection.rs  lib.rs  light.rs  material.rs  matrix.rs  ray.rs  sphere.rs  transform.rs  tuple.rs  utils.rs
